# FraudShield

./: .gitignore  README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt
accounts/: admin.py  models.py  signals.py
accounts/migrations/: 0001_initial.py
api/: apps.py  serializers.py  urls.py  views.py
client/: index.html
client/src/: App.tsx
client/src/components/dashboard/: ActivityTable.tsx  StatCard.tsx
client/src/components/fraud/: FraudRules.tsx  FraudStats.tsx
client/src/components/layout/: Navbar.tsx  Sidebar.tsx
client/src/components/phishing/: EmailAnalyzer.tsx  EmailList.tsx  EmailResultsDisplay.tsx  EmailStats.tsx
client/src/components/photo/: PhotoUpload.tsx  ResultsDisplay.tsx
client/src/hooks/: use-auth.tsx
client/src/lib/: types.ts
client/src/pages/: Dashboard.tsx  FraudDetection.tsx  LandingPage.tsx  PhishingDetection.tsx  PhotoRecognition.tsx  ProfilePage.tsx  Reports.tsx  SettingsPage.tsx  auth-page.tsx
fraud_detection/: admin.py  apps.py  models.py
fraud_detection/migrations/: 0001_initial.py
phishing_detection/: admin.py  apps.py  models.py
phishing_detection/migrations/: 0001_initial.py
photo_recognition/: admin.py  apps.py  models.py  utils.py
photo_recognition/migrations/: 0001_initial.py
securecheck/: asgi.py  settings.py  urls.py  wsgi.py
server/: auth.ts  routes.ts  storage.ts
server/services/: fraudService.ts  phishingService.ts  photoService.ts
shared/: schema.ts
templates/: index.html
